Bug 29122 - MHD_USE_DUAL_STACK doesn't work when ipv6 is disabled
Summary: MHD_USE_DUAL_STACK doesn't work when ipv6 is disabled
Status: RESOLVED FIXED
Alias: None
Product: elfutils
Classification: Unclassified
Component: debuginfod (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Mark Wielaard
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-05 21:59 UTC by Mark Wielaard
Modified: 2022-05-11 22:57 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Wielaard 2022-05-05 21:59:36 UTC
On a system that has ipv6 disabled debuginfod doesn't start up anymore because libhttpd MHD_USE_DUAL_STACK only works if it can open an ipv6 socket.
Comment 1 Mark Wielaard 2022-05-05 22:41:56 UTC
Proposed patch:
https://sourceware.org/pipermail/elfutils-devel/2022q2/005013.html
Comment 2 Mark Wielaard 2022-05-11 22:57:47 UTC
commit 51571ca7685fad821eb98eaa481f64de7f44bb07
Author: Mark Wielaard <mark@klomp.org>
Date:   Thu May 5 23:59:57 2022 +0200

    debuginfod: Try without MHD_USE_DUAL_STACK if MHD_start_daemon fails
    
    On a systems that have ipv6 disabled debuginfod doesn't start up
    anymore because libhttpd MHD_USE_DUAL_STACK only works if it can
    open an ipv6 socket. If MHD_start_daemon with MHD_USE_DUAL_STACK
    fails try again without that flag set.
    
    https://sourceware.org/bugzilla/show_bug.cgi?id=29122
    
    Signed-off-by: Mark Wielaard <mark@klomp.org>